# quad

./: .env  .gitignore  .gitmodules  Cargo.toml  README.md  TODO  build.rs  log  log.txt  perf.data  schema.sql  thing
crates/bf_controller/: Cargo.toml
crates/bf_controller/src/: lib.rs
crates/controller/: Cargo.toml  build.rs
crates/controller/src/: lib.rs
crates/controller/src/bindings/: bf_bindings_generated.rs  mod.rs
crates/controller/src/controllers/: bf_controller.rs
crates/cuboid-bevy/: Cargo.toml
crates/cuboid_bevy/: Cargo.toml
crates/cuboid_bevy/src/: lib.rs  rigid_body.rs
crates/db/: Cargo.toml
crates/db/migrations/: 0001_schema.up.sql
crates/db/src/: lib.rs  model.rs  reservoir.rs  schema.rs  simulation.rs  simulation_frame.rs
crates/db2/: Cargo.toml
crates/db2/src/: db_loader.rs  file_loader.rs  file_logger.rs  lib.rs
crates/db_common/: Cargo.toml  schema.sqlite
crates/db_common/src/: lib.rs  queries.rs
crates/drone/: Cargo.toml
crates/drone/src/: default_drone.rs  lib.rs
crates/environment/: Cargo.toml  Readme.md  pyproject.toml
crates/environment/python/environment/: __init__.py  __init__.pyi
crates/environment/python/tests/: basic_env.py  ppo.py
crates/environment/src/: lib.rs
crates/flight_controller/: Cargo.toml  build.rs  config_file.txt
crates/flight_controller/src/: lib.rs
crates/flight_controller/src/bindings/: bf_bindings_generated.rs  mod.rs  sitl_generated.rs
crates/flight_controller/src/controllers/: bf_controller.rs  bf_controller2.rs  manager.rs  mod.rs  null_controller.rs  res_controller.rs
crates/flight_controller/src/controllers/bf_controller/: bf.rs  bf2.rs  mod.rs
crates/loaders/: Cargo.toml
crates/loaders/src/: lib.rs
crates/loaders/src/db_loader/: mod.rs
crates/loaders/src/db_loader/schema/: mod.rs
crates/loaders/src/default_laoder/: mod.rs
crates/loaders/src/file_loader/: mod.rs
crates/loggers/: Cargo.toml
crates/loggers/src/: lib.rs
crates/loggers/src/db_logger/: mod.rs
crates/loggers/src/empty_logger/: mod.rs
crates/loggers/src/file_logger/: mod.rs
crates/loggers/src/rerun_logger/: mod.rs
crates/quad-bevy/: Cargo.toml
crates/quad-sim/: Cargo.toml
crates/quad-sim/src/: arm.rs  controller.rs  lib.rs  sample_curve.rs
crates/quad_bevy/: Cargo.toml
crates/quad_bevy/assets/: drone.glb
crates/quad_bevy/src/: controller.rs  game_loop.rs  lib.rs  main.rs  setup.rs  ui.rs
crates/quad_sim/: Cargo.toml
crates/quad_sim/src/: arm.rs  constants.rs  controller.rs  lib.rs  low_pass_filter.rs  math.rs  noise.rs  rigid_body.rs  sample_curve.rs
crates/res/: Cargo.toml  log  pyproject.toml  test.py
crates/res/.cargo/: config.toml
crates/res/src/: drone.rs  drone2.rs  esn.rs  input.rs  lib.rs  representation.rs  reservoir.rs  ridge.rs
crates/res/src/drone/: mod.rs
crates/res/src/esn/: mod.rs  rc.rs  representation.rs  reservoir.rs
crates/res/src/input/: mod.rs
crates/res/src/izhikevich/: mod.rs
crates/res/src/readout/: mod.rs
crates/res/src/representation/: mod.rs
crates/res/src/verification/: mod.rs
crates/res_controller/: Cargo.toml
crates/res_controller/src/: lib.rs
crates/res_controller_training/: Cargo.toml
crates/res_controller_training/src/: lib.rs
crates/ridge/: Cargo.toml
crates/ridge/src/: lib.rs  ridge2.rs
crates/sim/: Cargo.toml  build.rs
crates/sim/assets/: drone2.glb  drone3.glb  drone3.stl  drone5.glb
crates/sim/src/: main.rs
crates/sim_context/: Cargo.toml
crates/sim_context/src/: input_gen.rs  lib.rs  sim_context2.rs
crates/simulator/: Cargo.toml
crates/simulator/src/: arm.rs  components.rs  components_two.rs  constants.rs  default_drone.rs  input_gen.rs  lib.rs  loader.rs  logger.rs  loggers.rs  low_pass_filter.rs  noise.rs  rigid_body_two.rs  sample_curve.rs
crates/simulator2/: Cargo.toml
crates/simulator2/src/: lib.rs
crates/visualizer/: Cargo.toml  build.rs
crates/visualizer/assets/: drone4.glb  drone_1.glb
crates/visualizer/src/: controller.rs  drone.rs  game_loop.rs  main.rs  replay.rs  setup.rs  sim.rs  state.rs  ui.rs
crates/visualizer/src/ui/: menu.rs  menu2.rs  mod.rs  replay.rs  simulation.rs
migrations/: 0001_schema.down.sql  0001_schema.up.sql
scripts/: input.py
src/: constants.rs  main.rs  sample_curve.rs  simplex1d.rs
src/control/: mod.rs
src/drone/: arm.rs  battery.rs  body.rs  gyro.rs  low_pass_filter.rs  mod.rs  motor.rs  propeller.rs  rigid_body.rs  sample_curve.rs  state_packet.rs  state_update_packet.rs
src/quboid/: mod.rs  rigid_body.rs  ui.rs
src/rigid_body/: mod.rs
src/sim/: arm.rs  battery.rs  controller.rs  drone.rs  gyro.rs  low_pass_filter.rs  mod.rs  rigid_body.rs  state_packet.rs  ui.rs
src/sim/drone/: arm.rs  mod.rs  noise.rs
src/ui/: mod.rs
