[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
# internal
visualizer = { path = "crates/visualizer" }
simulator = { path = "crates/simulator" }
flight_controller = { path = "crates/flight_controller" }
db = { path = "crates/db" }
res = { path = "crates/res" }
environment = { path = "crates/environment" }
environment2 = { path = "crates/environment2" }

# external
nalgebra = { version = "0.33.0", features = ["serde-serialize"] } 
toml = "0.8.19"
csv = "1.3.1"
serde = {version = "1.0.215", features = ["derive"] } 
rusqlite = { version = "0.32.1", features = ["bundled"] }
uuid = {version = "1.11.0", features = ["v4", "fast-rng"] }
pyo3 = {version =  "0.23.3" }
# pyo3 = {version =  "0.23.3", features = ["extension-module"] }
pyo3-log = "0.12.0"
# speed up the training on the gpu
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.2", features = ["cuda"] }
rerun = "0.21.0"
log = "0.4.25"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

[profile.release]
debug = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
