[package]
name = "cuboid_bevy"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

[profile.release]
debug = 1

# # Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
bevy_egui = "0.30.0"
bevy_panorbit_camera = "0.19.3"
