[package]
name = "db"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
rusqlite.workspace = true
nalgebra.workspace = true
derive_more = { version = "1.0.0", features = ["full"] }
diesel = {version = "2.2.6", features = ["sqlite", "64-column-tables"]}
serde.workspace = true
# TODO: we can work with this later on
sqlx.workspace = true
smol.workspace = true
futures.workspace = true
