[package]
name = "flight_controller"
version = "0.1.0"
edition = "2021"
resolver = "2"

[build-dependencies]
bindgen = "0.70.1"

[dependencies]
libloading = "0.8.6"
once_cell = "1.20.2"
nalgebra.workspace = true
res.workspace = true
# db.workspace = true
uuid.workspace = true
log.workspace = true
ridge.workspace = true
libc = "0.2.169"
dlopen2 = "0.7.0"
tempfile = "3.17.1"
serde.workspace = true
db_common.workspace = true
# res_controller.workspace = true
