[package]
name = "loaders"
version = "0.1.0"
edition = "2024"

[dependencies]
# TODO: we can work with this later on
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "sqlite", "macros"] }
smol = "2.0.2"
futures = "0.3.31"
diesel = {version = "2.2.6", features = ["sqlite", "64-column-tables"]}
derive_more = { version = "1.0.0", features = ["full"] }
rusqlite.workspace = true
flight_controller.workspace = true
nalgebra.workspace = true
drone.workspace = true
simulator.workspace = true
loggers.workspace = true
