[package]
name = "loaders"
version = "0.1.0"
edition = "2024"

[dependencies]
# TODO: we can work with this later on
sqlx.workspace = true
# diesel = {version = "2.2.6", features = ["sqlite", "64-column-tables"]}
derive_more = { version = "1.0.0", features = ["full"] }
# rusqlite.workspace = true
flight_controller.workspace = true
nalgebra.workspace = true
drone.workspace = true
simulator.workspace = true
loggers.workspace = true
serde_json.workspace = true
smol.workspace = true
# futures.workspace = true
res.workspace = true
db_common.workspace = true
base64 = "0.22.1"
bincode = "1.3.3"
ridge.workspace = true
res_controller.workspace = true
