[package]
name = "quad_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
# bevy.workspace = true
rand_xoshiro.workspace = true
rand.workspace = true
libm.workspace = true
fast-math.workspace = true
nalgebra.workspace = true
fastapprox.workspace = true

[features]
default = []
noise = []
temp = []
