[package]
name = "res"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
nalgebra.workspace = true
matfile = { version = "0.5.0", features = ["ndarray"] } 
rand = "0.8.5"
rand_distr = "0.4.3"
pyo3.workspace = true
smartcore = "0.4.0"
flight_controller.workspace = true

[lib]
name = "res"
crate-type = ["cdylib"]
