[package]
name = "res"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
nalgebra.workspace = true
# db.workspace = true
ridge.workspace = true
matfile = { version = "0.5.0", features = ["ndarray"] } 
rand = "0.8.5"
rand_distr = "0.4.3"
pyo3.workspace = true
smartcore = { version = "0.4.0" }
bincode = "1.3.3"
serde = "1.0.217"
base64 = "0.22.1"

