[package]
name = "sim_context"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
simulator.workspace = true
# csv.workspace = true
# db.workspace = true
# db2.workspace = true
flight_controller.workspace = true
uuid.workspace = true
rand.workspace = true
drone.workspace = true
loaders.workspace = true
loggers.workspace = true
db_common.workspace = true
