[package]
name = "simulator"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
rand_xoshiro = "0.6.0"
pyo3.workspace = true
pyo3-log.workspace = true 
rand = "0.8.5"
derive_more = { version = "1.0.0", features = ["full"] }
nalgebra.workspace = true
flight_controller.workspace = true
csv.workspace = true
serde.workspace = true
rusqlite.workspace = true
uuid.workspace = true
db.workspace = true
rayon = "1.10.0"

[features]
default = []
noise = []
temp = []
