[package]
name = "simulator"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
rand_xoshiro = "0.6.0"
rerun.workspace = true
rand = "0.8.5"
nalgebra.workspace = true
flight_controller.workspace = true
csv.workspace = true
serde.workspace = true
uuid.workspace = true
drone.workspace = true
rayon = "1.10.0"
derive_more.workspace = true
loggers.workspace = true
db_common.workspace = true

[features]
default = []
noise = []
temp = []
