[package]
name = "visualizer"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

[profile.release]
debug = 1

# # Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
simulator.workspace = true 
nalgebra.workspace = true
flight_controller.workspace = true
toml.workspace = true
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
bevy_asset_loader = "0.21.0"
bevy_egui = "0.30.0"
bevy_infinite_grid = "0.13.1"
bevy_panorbit_camera = "0.19.3"
egui_extras = "0.29.1"

[features]
default = []
noise = []
