[package]
name = "visualizer"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
simulator.workspace = true
db.workspace = true
db2.workspace = true
nalgebra.workspace = true
flight_controller.workspace = true
csv.workspace = true
toml.workspace = true
bevy = { version = "0.14.2" }
bevy_asset_loader = "0.21.0"
bevy_egui = "0.30.0"
bevy_infinite_grid = "0.13.1"
bevy_panorbit_camera = "0.19.3"
egui_extras = "0.29.1"
cc = "1.0"
uuid.workspace = true

[build-dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
cc = "1.0"

[features]
default = []
noise = []
